tests/error/addInteger-unit-wrong-1st-argument.uplc
(program 1.0.0[[(builtin addInteger)(con unit ())](con integer 10)])